# OpenFourr

./: .gitignore  Anchor.toml  OPENFOURR.md  README.md  package-lock.json  package.json
api/: package.json
api/src/: judge.ts  server.ts
programs/openfourr/: Cargo.toml
programs/openfourr/src/: lib.rs
scripts/: check-platform.ts  create-task.ts  debug-tasks.ts  initialize.ts  test-frontend-logic.ts
sdk/src/: index.ts
web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/agents/: page.tsx
web/app/agents/[address]/: page.tsx
web/app/dashboard/: page.tsx
web/app/tasks/: page.tsx
web/app/tasks/[id]/: page.tsx
web/app/tasks/new/: page.tsx
web/components/: AgentCard.tsx  Navbar.tsx  Stats.tsx  TaskCard.tsx  WalletProvider.tsx
web/lib/: constants.ts  idl.json  idl.ts  ipfs.ts  useProgram.ts
web/scripts/: initialize.mjs
